# ASH-MKII

./: .gitmodules  README.md
altium/carrier/Project Outputs for carrier/: Design Rule Check - carrier.drc  Design Rule Check - carrier.html  Status Report.Txt  carrier-RoundHoles.TXT  carrier.DRR  carrier.EXTREP  carrier.REP  carrier.RUL
altium/carrier/Project Outputs for carrier/__Previews/: carrier-RoundHoles.TXTPreview  carrier.DRRPreview  carrier.RULPreview
altium/carrier/Project Outputs for carrier/gerbers/: Status Report.Txt  cam.drl  carrier-RoundHoles.TXT  carrier-macro.APR_LIB  carrier.DRR  carrier.EXTREP  carrier.G1  carrier.G2  carrier.GBL  carrier.GBO  carrier.GBP  carrier.GBS  carrier.GKO  carrier.GTL  carrier.GTO  carrier.GTP  carrier.GTS  carrier.LDP  carrier.REP  carrier.RUL  carrier.TXT  carrier.apr
altium/carrier/Project Outputs for carrier/gerbers/__Previews/: carrier-RoundHoles.TXTPreview  carrier.DRRPreview  carrier.LDPPreview  carrier.REPPreview
altium/carrier/Project Outputs for carrier/release/: Status Report.Txt
altium/carrier/Project Outputs for carrier/release/11-03/: carrier.OutJob  front_raspicams.SchDoc  gpa_actives.PcbLib  gpa_passives.PcbLib  gpa_vendor_specific.PcbLib  m2_connector.Harness  sound.SchDoc
altium/carrier/Project Outputs for carrier/release/11-14/: carrier.SchDoc  ethernet_hdmi.SchDoc  front_io.SchDoc  gpa_connectors.SchLib  gpa_mounting.PcbLib  gpa_nxp.SchLib  m2_connector.SchDoc  psu_and_discharge.SchDoc  servos.SchDoc  usb_connectors.SchDoc
altium/carrier/__Previews/: GenericPSU.SchDocPreview  carrier.$$$Preview  carrier.HarnessPreview  carrier.PcbDocPreview  carrier.SchDocPreview  coverpage.SchDocPreview  ethernet_hdmi.SchDocPreview  front_io.SchDocPreview  front_raspicams.SchDocPreview  m2_connector.SchDocPreview  module.HarnessPreview  module.SchDocPreview  overview.SchDocPreview  psu_and_discharge.SchDocPreview  servo_psu.SchDocPreview  servos.SchDocPreview  sound.SchDocPreview  usb_connectors.SchDocPreview
altium/eye/: eye.PrjPcb
altium/eye/Project Outputs for eye/: Status Report.Txt  eye.DRR  eye.EXTREP  eye.GBL  eye.GBO  eye.GBS  eye.GKO  eye.GTL  eye.GTO  eye.GTS  eye.LDP  eye.REP  eye.RUL  eye.TXT  eye.apr
altium/eye/Project Outputs for eye/__Previews/: eye.DRRPreview
altium/eye/__Previews/: eye.PcbDocPreview  eye.SchDocPreview
altium/power/: leg.SchDoc  power.PrjPCB  power.SchDoc
altium/power/__Previews/: leg.SchDocPreview  power.SchDocPreview
altium/scu/: generic.SchLib  scu.PrjPcb  scu.PrjPcbStructure  scu.SchDoc  scu_connector.SchDoc
altium/scu/__Previews/: scu.SchDocPreview  scu_connector.SchDocPreview
src_carrier/: CMakeLists.txt  SCPI.txt  body.c  body.h  jetson.c  leg.c  leg.h  main.c  octapod.dts
src_carrier/drivers/: CMakeLists.txt  dev.c  dev.h  lm3549.c  lm3549.h  mpu6000.c  mpu6000.h  pca9685.c  pca9685.h
src_carrier/drivers/i2c/: CMakeLists.txt  i2c_generic.h  i2c_stm32f4.c  i2c_stm32f4.h
src_carrier/drivers/serial/: serial_generic.h
src_carrier/drivers/spi/: CMakeLists.txt  spi_generic.h
src_carrier/fdt/: CMakeLists.txt  dtb_parser.c  dtb_parser.h  dtb_templ.S  fdt.cmake  gait_common.dtsi  gait_normal.dts  gpa_system.dts  octapod.dts
src_carrier/gait/: CMakeLists.txt  gait.c  gait.h  gait_descriptor.c  gait_normal.dtb  gait_normal.dts  gait_octa_home.dtsi  gaits.dts  gpa_system.dtb  ik.c  ik.h  test.gdf
src_carrier/math/: CMakeLists.txt  linalg.h  linalg_mat.c  linalg_util.c  linalg_util.h  linalg_vec.c  linalg_vecmat.c
src_carrier/scpi/: scpi.c  scpi.h
src_carrier/tasks/: tasks.c  tasks.h
src_jetson/: CMakeLists.txt
src_jetson/cores/: core.cpp  core.h
utils/: evdev_test.py  matrix_calc.py
